Partial_14Dec2021/force-app/main/default/objects/AWS_S3__c/AWS_S3__c.object-meta.xml
<CustomObject>
    <label>AWS S3</label>
    <nameField>
        <label>AWS S3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AWS S3</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>