Partial_14Dec2021/force-app/main/default/objects/AWS_S3__c/fields/AccessKey__c.field-meta.xml
<CustomField>
    <fullName>AccessKey__c</fullName>
    <label>AccessKey</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>