Partial_14Dec2021/force-app/main/default/objects/AWS_S3__c/fields/BucketName__c.field-meta.xml
<CustomField>
    <fullName>BucketName__c</fullName>
    <label>BucketName</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>