Partial_14Dec2021/force-app/main/default/objects/AWS_S3__c/fields/Prefix__c.field-meta.xml
<CustomField>
    <fullName>Prefix__c</fullName>
    <label>Prefix</label>
    <length>200</length>
    <type>Text</type>
</CustomField>